Null dereference loading Blink layout test editing/execCommand/indent-inline-box-crash.html https://bugs.webkit.org/show_bug.cgi?id=149290 <rdar://problem/22746435>

Patch by Jiewen Tan <jiewen_tan@apple.com> on 2015-10-26
Reviewed by Alex Christensen.

Source/WebCore:

This is a merge of Blink r174952:
https://codereview.chromium.org/297203004

Test: editing/execCommand/indent-inline-box-crash.html

* editing/IndentOutdentCommand.cpp:
(WebCore::IndentOutdentCommand::tryIndentingAsListItem):

LayoutTests:

* editing/execCommand/indent-inline-box-crash-expected.txt: Added.
* editing/execCommand/indent-inline-box-crash.html: Added.

Canonical link: https://commits.webkit.org/168716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191597 268f45cc-cd09-0410-ab3c-d52691b4dbfc